# file_shredder

./: .gitignore  README.md
src/: admin-account.html  admin-dashboard.html  approved_shred_requests.html  dashboard.html  denied_shred_requests.html  employee-account.html  employee-dashboard.html  employee_approved_shred_requests.html  employee_denied_shred_requests.html  file-search-history.html  file-search.html  index.html  login.html  pending_shred_requests.html  review_shred_requests.html  signup.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: auth_commands.rs  initialize_app.rs  lib.rs  main.rs  search_commands.rs  shred_commands.rs  shred_file.rs  shredder_functions.rs  user_commands.rs
src/assets/css/: portal.css
src/assets/js/: account.js  file-search.js  login.js  logout.js  notification.js  session.js  shredder.js  signup.js
