[package]
name = "file_shredder"
version = "0.0.6"
description = "File Shredder is a secure and efficient application built with Tauri. It allows users to permanently delete files from their system, ensuring that the data cannot be recovered."
authors = ["priest"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "notification-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version =  "0.31.0", features = ["bundled"] }
notify-rust = "4.10.0"
regex = "1.10.3"
walkdir = "2.4.0"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
