[package]
name = "file_shredder"
version = "1.1.0"
description = "File Shredder is a secure and efficient application built with Tauri. It allows users to permanently delete files from their system, ensuring that the data cannot be recovered."
authors = ["priest"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version =  "0.31.0", features = ["bundled"] }
notify-rust = "4.10.0"
regex = "1.10.3"
walkdir = "2.4.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
tauri-plugin-notification = "2.0.0-beta.1"
tauri-plugin-shell = "2.0.0-beta.1"
tauri-plugin-dialog = "2.0.0-beta.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[workspace]
